changed aspectj version

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile group: 'io.qameta.allure', name: 'allure-testng', version: '2.13.1'
     compile group: 'io.qameta.allure', name: 'allure-selenide', version: '2.13.2'
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.30'
-    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.6.10'
+    implementation 'org.aspectj:aspectjweaver:1.9.4'
 }
 
 
